# haskell-type-alias-resolver

./: .gitignore  .gitmodules  Cargo.toml  README.md  jpairExample.hs  lockerLookupExample.hs  outputTemplate.json  test.hs  test3.hs
backend/: Cargo.toml  README.md  TODOS  build.rs  expanded_trees.txt
backend/dev_notes/: jpairExample.hs  outputTemplate.json  stateIdea.hs
backend/src/: alias.rs  lib.rs  main.rs  types.rs
backend/tests/: concrete.rs  generic.rs  simple.rs
backend/tests/common/: mod.rs
backend/tests/haskell/: test5.hs
backend/tests/input_files/: concrete.hs  example.hs  generic.hs  simple.hs
backend/tests/manual/haskell/: test2.hs  test4.hs  test6.hs
elm-frontend/src/: Main.elm
seed-frontend/: Cargo.toml  README.md  index.html
seed-frontend/src/: main.rs
src/: alias.rs  main.rs
tests/haskell/: test3.hs
tests/json/: test.json
vscode-extension/: package-lock.json
